# arduino-mcp-server-simple

./: README.md  mcp_arduino.py  mcp_hello.py  pyproject.toml  requirements.txt
.cursor/: mcp.json
arduino_mcp_tool/: __init__.py
sketches/echo_serial/: echo_serial.ino
