[tool.poetry]
name = "arduino-mcp-server-simple"
version = "0.2.0"
description = "A simple Model Context Protocol (MCP) server for interacting with Arduino boards."
authors = ["Ari Mahpour"]
repository = "https://github.com/amahpour/arduino-mcp-server-simple"
readme = "README.md"
# Include the package containing the MCP tool
packages = [{include = "arduino_mcp_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "2.10.6"
pyserial = "3.5"

[tool.poetry.scripts]
arduino-mcp-tool = "arduino_mcp_tool:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
